t# Please enter the commit message for your changes. Lines starting

--- a/hot_spot/settings.ini
+++ b/hot_spot/settings.ini
@@ -1,10 +1,17 @@
 [Temperature]
 jump_value = 1.0
-limit_value = 30.0
+limit_value = 1.0
 
 [Sim]
 sim = True
 
 [Gui]
 gui = False
+
+[Size]
+length = 20
+slice = 10
+
+[Time]
+time = 30
 
